--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,13 @@
 		<url>https://software.microfocus.com/software/enterprise-security</url>
 		<name>Fortify</name>
 	</organization>
+
+	<properties>
+		<maven.compiler.source>6</maven.compiler.source>
+		<maven.compiler.target>1.6</maven.compiler.target>
+	</properties>
+
+
 	<dependencies>
 		<dependency>
 			<groupId>junit</groupId>
