--- a/.github/workflows/fortify.yml
+++ b/.github/workflows/fortify.yml
@@ -1,42 +1,3 @@
-name: 'Perform SAST scan'
-description: 'Perform a SAST scan on ScanCentral SAST'
-author: 'Fortify'
-runs:
-  using: composite
-  steps:
-    - name: Check out source code
-      uses: actions/checkout@v4
-    - name: Run ScanCentral SAST Scan
-      uses: fortify/github-action/sc-sast-scan@v1
-      env:
-        SSC_URL: ${{secrets.SSC_URL}}
-        SSC_TOKEN: ${{secrets.SSC_TOKEN}}
-        SC_SAST_TOKEN: ${{secrets.CLIENT_AUTH_TOKEN}}
-        # EXTRA_SC_SAST_LOGIN_OPTS: --socket-timeout=60s
-        # SSC_APPVERSION: MyApp:MyVersion
-        # EXTRA_PACKAGE_OPTS: -bf custom-pom.xml
-        SC_SAST_SENSOR_VERSION: 23.2
-        # DO_WAIT: true
-        # DO_EXPORT: true
-        # TOOL_DEFINITIONS: https://ftfy.mycompany.com/tool-definitions/v1/tool-definitions.yaml.zip
-  steps:
-    - uses: fortify/github-action/setup@main
-      with:
-        export-path: false
-        fcli: action-default
-    - uses: fortify/github-action/internal/sc-sast-login@main
-    - uses: fortify/github-action/package@main
-    - uses: fortify/github-action/internal/run@main
-      with:
-        cmd: '"${FCLI_CMD}" sc-sast scan start --publish-to "${SSC_APPVERSION}" -p package.zip -v "${SC_SAST_SENSOR_VERSION}" --store sc_sast_scan ${EXTRA_SC_SAST_SCAN_OPTS}'
-    - uses: fortify/github-action/internal/run@main
-      if: env.DO_WAIT == 'true' || env.DO_EXPORT == 'true'
-      with:
-        cmd: '"${FCLI_CMD}" sc-sast scan wait-for ::sc_sast_scan::'
-    - uses: fortify/github-action/internal/sc-sast-logout@main
-    - if: env.DO_EXPORT == 'true'
-      uses: fortify/github-action/ssc-export@main
-
-branding:
-  icon: 'shield'
-  color: 'blue'
+- name: Fortify AST Scan
+  uses: fortify/github-action@v1.2.2
+            
