--- a/.github/workflows/fortify.yml
+++ b/.github/workflows/fortify.yml
@@ -78,7 +78,7 @@ jobs:
                                                                      # usually defined as organization or repo variable
           ### Optional configuration when integrating with Fortify Hosted / Software Security Center & ScanCentral
           # EXTRA_SC_SAST_LOGIN_OPTS: --socket-timeout=60s # Extra 'fcli sc-sast session login' options
-           SSC_APPVERSION: MyApp:MyVersion                # SSC application version, default: <org>/<repo>:<branch>
-           EXTRA_PACKAGE_OPTS: -bv myCustomPom.xml        # Extra 'scancentral package' options
-           DO_WAIT: true                                  # Wait for scan completion, implied if 'DO_EXPORT: true'
-           DO_EXPORT: true                                # Export SAST results to GitHub code scanning dashboard
+          # SSC_APPVERSION: MyApp:MyVersion                # SSC application version, default: <org>/<repo>:<branch>
+          # EXTRA_PACKAGE_OPTS: -bv myCustomPom.xml        # Extra 'scancentral package' options
+          # DO_WAIT: true                                  # Wait for scan completion, implied if 'DO_EXPORT: true'
+          # DO_EXPORT: true                                # Export SAST results to GitHub code scanning dashboard
