--- a/.github/workflows/fortify.yml
+++ b/.github/workflows/fortify.yml
@@ -82,3 +82,20 @@ jobs:
           # EXTRA_PACKAGE_OPTS: -bv myCustomPom.xml        # Extra 'scancentral package' options
           # DO_WAIT: true                                  # Wait for scan completion, implied if 'DO_EXPORT: true'
           # DO_EXPORT: true                                # Export SAST results to GitHub code scanning dashboard
+      - name: Run FoD SAST Scan 2
+        uses: fortify/github-action/setup@main
+        with:
+          export-path: false
+          fcli: action-default
+      - uses: fortify/github-action/internal/sc-sast-login@main
+      - uses: fortify/github-action/package@main
+      - uses: fortify/github-action/internal/run@main
+        with:
+          cmd: '"${FCLI_CMD}" sc-sast scan start --publish-to "${SSC_APPVERSION}" -p package.zip -v "${SC_SAST_SENSOR_VERSION}" --store sc_sast_scan ${EXTRA_SC_SAST_SCAN_OPTS}'
+      - uses: fortify/github-action/internal/run@main
+        if: env.DO_WAIT == 'true' || env.DO_EXPORT == 'true'
+        with:
+          cmd: '"${FCLI_CMD}" sc-sast scan wait-for ::sc_sast_scan::'
+      - uses: fortify/github-action/internal/sc-sast-logout@main
+      - if: env.DO_EXPORT == 'true'
+        uses: fortify/github-action/ssc-export@main
