fortify/github-action@v1.2.2

--- a/.github/workflows/fortify.yml
+++ b/.github/workflows/fortify.yml
@@ -52,7 +52,7 @@ jobs:
       # required, you can use sub-actions like fortify/github-action/setup@v1 to set up the various Fortify tools
       # and run them directly from within your pipeline; see https://github.com/fortify/github-action#readme for
       # details.
-      - name: Run FoD SAST Scan
+      - name: Run ScanCentral SAST Scan configuration
         uses: fortify/github-action@a92347297e02391b857e7015792cd1926a4cd418
         with:
           sast-scan: true
@@ -82,7 +82,7 @@ jobs:
           # EXTRA_PACKAGE_OPTS: -bv myCustomPom.xml        # Extra 'scancentral package' options
           # DO_WAIT: true                                  # Wait for scan completion, implied if 'DO_EXPORT: true'
           # DO_EXPORT: true                                # Export SAST results to GitHub code scanning dashboard
-      - name: Run FoD SAST Scan 2
+      - name: Run ScanCentral SAST Scan
         uses: fortify/github-action/setup@main
         with:
           export-path: false
