--- a/.github/workflows/fortify.yml
+++ b/.github/workflows/fortify.yml
@@ -74,11 +74,11 @@ jobs:
           SSC_URL: ${{secrets.SSC_URL}}                            # SSC URL
           SSC_TOKEN: ${{secrets.SSC_TOKEN}}                        # SSC CIToken or AutomationToken
           SC_SAST_TOKEN: ${{secrets.SC_SAST_TOKEN}}                # ScanCentral SAST client auth token
-          SC_SAST_SENSOR_VERSION: ${{vars.SC_SAST_SENSOR_VERSION}} # Sensor version on which to run the scan;
+          SC_SAST_SENSOR_VERSION: 24.2 # Sensor version on which to run the scan;
                                                                      # usually defined as organization or repo variable
           ### Optional configuration when integrating with Fortify Hosted / Software Security Center & ScanCentral
           # EXTRA_SC_SAST_LOGIN_OPTS: --socket-timeout=60s # Extra 'fcli sc-sast session login' options
-          SSC_APPVERSION: MyApp:MyVersion                # SSC application version, default: <org>/<repo>:<branch>
+          SSC_APPVERSION: 59                # SSC application version, default: <org>/<repo>:<branch>
           EXTRA_PACKAGE_OPTS: -bt none        # Extra 'scancentral package' options
           DO_WAIT: true                                  # Wait for scan completion, implied if 'DO_EXPORT: true'
           DO_EXPORT: true                                # Export SAST results to GitHub code scanning dashboard
