--- a/.github/workflows/fortify.yml
+++ b/.github/workflows/fortify.yml
@@ -59,7 +59,8 @@ jobs:
         env:
           DO_WAIT: false
           DO_EXPORT: true
-          SSC_URL: ${{ secrets.SSC_URL }}
+          # SSC_URL: ${{ secrets.SSC_URL }}
+          SSC_URL: http://13.209.176.153:8080/ssc
           SSC_TOKEN: ${{ secrets.SSC_TOKEN }}
           SC_SAST_TOKEN: ${{ secrets.SC_SAST_TOKEN }}
           SC_SAST_SENSOR_VERSION: ${{ vars.SC_SAST_SENSOR_VERSION }}
