scancentral scan test

--- a/.github/workflows/fortify.yml
+++ b/.github/workflows/fortify.yml
@@ -48,39 +48,56 @@ jobs:
       #          SC_SAST_TOKEN: ${{ secrets.SC_SAST_TOKEN }}
       #          SC_SAST_SENSOR_VERSION: ${{ vars.SC_SAST_SENSOR_VERSION }}
 
-      - name: Perform SAST scan
-        uses: fortify/github-action/setup@main
+#      - name: Perform SAST scan
+#        uses: fortify/github-action/setup@main
+#        with:
+#          export-path: false
+#          fcli: action-default
+
+      - name: Setup Fortify tools
+        uses: fortify/github-action/setup@v1
         with:
-          export-path: false
-          fcli: action-default
+          tool-definitions: https://github.com/fortify/tool-definitions/releases/download/v1/tool-definitions.yaml.zip
+          export-path: true
+          fcli: latest
+          sc-client: 23.1.0
+          fod-uploader: latest
+          vuln-exporter: v2
+          bugtracker-utility: skip
+          debricked-cli: skip
+      - name: Run fcli from PATH
+        run: fcli -V
+      - name: Run fcli using FCLI_CMD environment variable
+        run: ${FCLI_CMD} -V
 
-      - name: Fortify SAST Login
-        uses: fortify/github-action/internal/sc-sast-login@main
-        env:
-          DO_WAIT: false
-          DO_EXPORT: true
-          SSC_URL: ${{ secrets.SSC_URL }}
-          SSC_TOKEN: ${{ secrets.SSC_TOKEN }}
-          SC_SAST_TOKEN: ${{ secrets.SC_SAST_TOKEN }}
-          SC_SAST_SENSOR_VERSION: ${{ vars.SC_SAST_SENSOR_VERSION }}
-
-      - name: Package for SAST-
-        uses: fortify/github-action/package@main
-
-      - name: Start SAST scan-
-        uses: fortify/github-action/internal/run@main
-        with:
-          cmd: '"${FCLI_CMD}" sc-sast scan start --publish-to "github_action:test1" -p package.zip -v "24.2.0.0150"'
-
-      - name: Wait for SAST scan to complete-
-        if: env.DO_WAIT == 'false' || env.DO_EXPORT == 'True'
-        uses: fortify/github-action/internal/run@main
-        with:
-          cmd: '"${FCLI_CMD}" sc-sast scan wait-for ::sc_sast_scan::'
-
-      - name: Logout from Fortify SAST
-        uses: fortify/github-action/internal/sc-sast-logout@main
-
-      - name: Export SAST results to GitHub
-        if: env.DO_EXPORT == 'True'
-        uses: fortify/github-action/ssc-export@main
+#      - name: Fortify SAST Login
+#        uses: fortify/github-action/internal/sc-sast-login@main
+#        env:
+#          DO_WAIT: false
+#          DO_EXPORT: true
+#          SSC_URL: ${{ secrets.SSC_URL }}
+#          SSC_TOKEN: ${{ secrets.SSC_TOKEN }}
+#          SC_SAST_TOKEN: ${{ secrets.SC_SAST_TOKEN }}
+#          SC_SAST_SENSOR_VERSION: ${{ vars.SC_SAST_SENSOR_VERSION }}
+#
+#      - name: Package for SAST
+#        uses: fortify/github-action/package@main
+#
+#      - name: Start SAST scan
+#        uses: fortify/github-action/internal/run@main
+#        with:
+#          # cmd: '"${FCLI_CMD}" sc-sast scan start --publish-to "github_action:test1" -p package.zip -v "24.2.0.0150"'
+#          cmd: '"${FCLI_CMD}" sc-sast scan start --publish-to "github_action:test1" -p package.zip -v "24.2.0.0150"'
+#
+#      - name: Wait for SAST scan to complete-
+#        if: env.DO_WAIT == 'false' || env.DO_EXPORT == 'True'
+#        uses: fortify/github-action/internal/run@main
+#        with:
+#          cmd: '"${FCLI_CMD}" sc-sast scan wait-for ::sc_sast_scan::'
+#
+#      - name: Logout from Fortify SAST
+#        uses: fortify/github-action/internal/sc-sast-logout@main
+#
+#      - name: Export SAST results to GitHub
+#        if: env.DO_EXPORT == 'True'
+#        uses: fortify/github-action/ssc-export@main
