--- a/.github/workflows/fortify.yml
+++ b/.github/workflows/fortify.yml
@@ -66,7 +66,7 @@ jobs:
           bugtracker-utility: skip
           debricked-cli: skip
       - name: Run fcli from PATH
-        run: scancentral -v
+        run: java -version
       - name: Run fcli using FCLI_CMD environment variable
         run: ${SC_CLIENT_CMD} -V
 
