--- a/.github/workflows/fortify.yml
+++ b/.github/workflows/fortify.yml
@@ -60,7 +60,7 @@ jobs:
           tool-definitions: https://github.com/fortify/tool-definitions/releases/download/v1/tool-definitions.yaml.zip
           export-path: true
           fcli: latest
-          sc-client: latest
+          sc-client: 23.1
           fod-uploader: latest
           vuln-exporter: v2
           bugtracker-utility: skip
