--- a/.github/workflows/fortify.yml
+++ b/.github/workflows/fortify.yml
@@ -68,7 +68,7 @@ jobs:
       - name: Run fcli from PATH
         run: scancentral --version
       - name: Run fcli using FCLI_CMD environment variable
-        run: echo ${SC_CLIENT_CMD} --version
+        run: echo ${SC_CLIENT_CMD} -h
 
 #      - name: Fortify SAST Login
 #        uses: fortify/github-action/internal/sc-sast-login@main
