--- a/.github/workflows/fortify.yml
+++ b/.github/workflows/fortify.yml
@@ -29,7 +29,7 @@ jobs:
         uses: actions/setup-java@v4.2.1
         with:
           java-version: '21'
-          distribution: 'zulu'
+          distribution: 'adopt-openj9'
 
       # Perform SAST and optionally SCA scan via Fortify on Demand/Fortify Hosted/Software Security Center, then
       # optionally export SAST results to the GitHub code scanning dashboard. In case further customization is
@@ -60,7 +60,7 @@ jobs:
           tool-definitions: https://github.com/fortify/tool-definitions/releases/download/v1/tool-definitions.yaml.zip
           export-path: true
           fcli: latest
-          sc-client: 24.2.0
+          sc-client: latest
           fod-uploader: latest
           vuln-exporter: v2
           bugtracker-utility: skip
