--- a/.github/workflows/fortify.yml
+++ b/.github/workflows/fortify.yml
@@ -13,7 +13,7 @@ on:
 jobs:
   Fortify-AST-Scan:
     # Use the appropriate runner for building your source code. Ensure dev tools required to build your code are present and configured appropriately (MSBuild, Python, etc).
-    runs-on: composite
+    runs-on: ubuntu-latest
     permissions:
       actions: read
       contents: read
@@ -58,9 +58,9 @@ jobs:
         uses: fortify/github-action/setup@v1.2.2
         with:
           tool-definitions: https://github.com/fortify/tool-definitions/releases/download/v1/tool-definitions.yaml.zip
-          export-path: true
+          export-path: false
           fcli: latest
-          sc-client: latest
+          sc-client: 23.2
           fod-uploader: latest
           vuln-exporter: v2
           bugtracker-utility: skip
