scancentral scan test

--- a/.github/workflows/fortify.yml
+++ b/.github/workflows/fortify.yml
@@ -58,7 +58,7 @@ jobs:
         uses: fortify/github-action/setup@v1.2.2
         with:
           tool-definitions: https://github.com/fortify/tool-definitions/releases/download/v1/tool-definitions.yaml.zip
-          export-path: false
+          export-path: true
           fcli: latest
           sc-client: 23.2
           fod-uploader: latest
