--- a/.github/workflows/fortify.yml
+++ b/.github/workflows/fortify.yml
@@ -14,10 +14,10 @@ jobs:
   Fortify-AST-Scan:
     # Use the appropriate runner for building your source code. Ensure dev tools required to build your code are present and configured appropriately (MSBuild, Python, etc).
     runs-on: ubuntu-latest
-    permissions:
-      actions: read
-      contents: read
-      security-events: write
+#    permissions:
+#      actions: read
+#      contents: read
+#      security-events: write
 
     steps:
       # Check out source code
