--- a/.github/workflows/fortify.yml
+++ b/.github/workflows/fortify.yml
@@ -13,7 +13,7 @@ on:
 jobs:
   Fortify-AST-Scan:
     # Use the appropriate runner for building your source code. Ensure dev tools required to build your code are present and configured appropriately (MSBuild, Python, etc).
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
 #    permissions:
 #      actions: read
 #      contents: read
@@ -25,11 +25,11 @@ jobs:
         uses: actions/checkout@v4
 
       # Java is required to run the various Fortify utilities. Ensuring proper version is installed on the runner.
-#      - name: Setup Java
-#        uses: actions/setup-java@v4.2.1
-#        with:
-#          java-version: '21'
-#          distribution: 'adopt-openj9'
+      - name: Setup Java
+        uses: actions/setup-java@v4.2.1
+        with:
+          java-version: '21'
+          distribution: 'temurin'
 
       # Perform SAST and optionally SCA scan via Fortify on Demand/Fortify Hosted/Software Security Center, then
       # optionally export SAST results to the GitHub code scanning dashboard. In case further customization is
