--- a/.github/workflows/fortify.yml
+++ b/.github/workflows/fortify.yml
@@ -59,10 +59,10 @@ jobs:
         with:
           tool-definitions: https://github.com/fortify/tool-definitions/releases/download/v1/tool-definitions.yaml.zip
           export-path: true
-          fcli: latest
+          fcli: skip
           sc-client: 24.2
-          fod-uploader: latest
-          vuln-exporter: v2
+          fod-uploader: skip
+          vuln-exporter: skip
           bugtracker-utility: skip
           debricked-cli: skip
       - name: Run fcli from PATH
