--- a/.github/workflows/fortify.yml
+++ b/.github/workflows/fortify.yml
@@ -30,7 +30,7 @@ jobs:
         with:
           java-version: '21'
           distribution: 'temurin'
-        run: java -v
+      - run: java -v
 
       # Perform SAST and optionally SCA scan via Fortify on Demand/Fortify Hosted/Software Security Center, then
       # optionally export SAST results to the GitHub code scanning dashboard. In case further customization is
