--- a/.github/workflows/fortify.yml
+++ b/.github/workflows/fortify.yml
@@ -67,7 +67,7 @@ jobs:
           bugtracker-utility: skip
           debricked-cli: skip
       - name: Run fcli from PATH
-        run: java -version
+        run: scancentral --version
       - name: Run fcli using FCLI_CMD environment variable
         run: ${SC_CLIENT_CMD} -h
 
