--- a/.github/workflows/fortify.yml
+++ b/.github/workflows/fortify.yml
@@ -77,7 +77,7 @@ jobs:
           SC_SAST_SENSOR_VERSION: ${{ vars.SC_SAST_SENSOR_VERSION }}
         with:
           # cmd: '"${FCLI_CMD}" sc-sast scan start --publish-to "github_action:test1" -p package.zip -v "24.2.0.0150"'
-          cmd: '"${SC_CLIENT_CMD}" -url http://13.209.176.153:8081/scancentral-ctrl/ start'
+          cmd: '"${SC_CLIENT_CMD}" -url http://13.209.176.153:8081/scancentral-ctrl/ start -bt none'
 #
 #      - name: Wait for SAST scan to complete-
 #        if: env.DO_WAIT == 'false' || env.DO_EXPORT == 'True'
