--- a/.github/workflows/fortify.yml
+++ b/.github/workflows/fortify.yml
@@ -72,12 +72,13 @@ jobs:
           DO_WAIT: false
           DO_EXPORT: true
           SSC_URL: ${{ secrets.SSC_URL }}
+          SC_CONTROLLER_URL: ${{ secrets.SC_CONTROLLER_URL }}
           SSC_TOKEN: ${{ secrets.SSC_TOKEN }}
           SC_SAST_TOKEN: ${{ secrets.SC_SAST_TOKEN }}
           SC_SAST_SENSOR_VERSION: ${{ vars.SC_SAST_SENSOR_VERSION }}
         with:
           # cmd: '"${FCLI_CMD}" sc-sast scan start --publish-to "github_action:test1" -p package.zip -v "24.2.0.0150"'
-          cmd: '"${SC_CLIENT_CMD}" -url http://13.209.176.153:8081/scancentral-ctrl/ start -bt none'
+          cmd: '"${SC_CLIENT_CMD}" -url ${SC_CONTROLLER_URL} start -bt none '
 #
 #      - name: Wait for SAST scan to complete-
 #        if: env.DO_WAIT == 'false' || env.DO_EXPORT == 'True'
