--- a/.github/workflows/fortify.yml
+++ b/.github/workflows/fortify.yml
@@ -14,29 +14,17 @@ jobs:
   Fortify-AST-Scan:
     # Use the appropriate runner for building your source code. Ensure dev tools required to build your code are present and configured appropriately (MSBuild, Python, etc).
     runs-on: ubuntu-latest
-#    permissions:
-#      actions: read
-#      contents: read
-#      security-events: write
 
     steps:
       # Check out source code
       - name: Check Out Source Code
         uses: actions/checkout@v4
-
       # Java is required to run the various Fortify utilities. Ensuring proper version is installed on the runner.
       - name: Setup Java
         uses: actions/setup-java@v4.2.1
         with:
           java-version: '11'
           distribution: 'temurin'
-
-#      - name: Perform SAST scan
-#        uses: fortify/github-action/setup@main
-#        with:
-#          export-path: false
-#          fcli: action-default
-
       - name: Setup Fortify tools
         uses: fortify/github-action/setup@v1.2.2
         with:
@@ -47,20 +35,10 @@ jobs:
           vuln-exporter: latest
           bugtracker-utility: skip
           debricked-cli: skip
-      - name: Run fcli from PATH
+      - name: Run scancentral from PATH
         run: scancentral --version
-      - name: Run fcli using FCLI_CMD environment variable
+      - name: Run scancentral using SC_CLIENT_CMD environment variable
         run: ${SC_CLIENT_CMD} -h
-
-#      - name: Fortify SAST Login
-#        uses: fortify/github-action/internal/sc-sast-login@main
-#        env:
-#          DO_WAIT: false
-#          DO_EXPORT: true
-#          SSC_URL: ${{ secrets.SSC_URL }}
-#          SSC_TOKEN: ${{ secrets.SSC_TOKEN }}
-#          SC_SAST_TOKEN: ${{ secrets.SC_SAST_TOKEN }}
-#          SC_SAST_SENSOR_VERSION: ${{ vars.SC_SAST_SENSOR_VERSION }}
 
       - name: Package for SAST
         uses: fortify/github-action/package@main
@@ -77,18 +55,4 @@ jobs:
           SC_SAST_TOKEN: ${{ secrets.SC_SAST_TOKEN }}
           SC_SAST_SENSOR_VERSION: ${{ vars.SC_SAST_SENSOR_VERSION }}
         with:
-          # cmd: '"${FCLI_CMD}" sc-sast scan start --publish-to "github_action:test1" -p package.zip -v "24.2.0.0150"'
           cmd: '"${SC_CLIENT_CMD}" -url ${SC_CONTROLLER_URL} start -bt none -upload -application "github_action" -version "test1" -uptoken ${SSC_UPLOAD_TOKEN}'
-#
-#      - name: Wait for SAST scan to complete-
-#        if: env.DO_WAIT == 'false' || env.DO_EXPORT == 'True'
-#        uses: fortify/github-action/internal/run@main
-#        with:
-#          cmd: '"${FCLI_CMD}" sc-sast scan wait-for ::sc_sast_scan::'
-#
-#      - name: Logout from Fortify SAST
-#        uses: fortify/github-action/internal/sc-sast-logout@main
-#
-      - name: Export SAST results to GitHub
-        if: env.DO_EXPORT == 'True'
-        uses: fortify/github-action/ssc-export@main
