--- a/.github/workflows/fortify.yml
+++ b/.github/workflows/fortify.yml
@@ -48,11 +48,9 @@ jobs:
         env:
           DO_WAIT: false
           DO_EXPORT: true
-          SSC_URL: ${{ secrets.SSC_URL }}
-          SC_CONTROLLER_URL: ${{ secrets.SC_CONTROLLER_URL }}
-          SSC_TOKEN: ${{ secrets.SSC_TOKEN }}
-          SSC_UPLOAD_TOKEN: ${{ secrets.SSC_UPLOAD_TOKEN }}
-          SC_SAST_TOKEN: ${{ secrets.SC_SAST_TOKEN }}
-          SC_SAST_SENSOR_VERSION: ${{ vars.SC_SAST_SENSOR_VERSION }}
+          SSC_URL: ${{ secrets.SSC_URL_KAKAOENT }}
+          SC_CONTROLLER_URL: ${{ secrets.SC_CONTROLLER_URL_KAKAOENT }}
+          SSC_TOKEN: ${{ secrets.SSC_TOKEN_KAKAOENT }}
+          SSC_UPLOAD_TOKEN: ${{ secrets.SSC_UPLOAD_TOKEN_KAKAOENT }}
         with:
           cmd: '"${SC_CLIENT_CMD}" -url ${SC_CONTROLLER_URL} start -bt none -upload -application "github_action" -version "test1" -uptoken ${SSC_UPLOAD_TOKEN}'
