--- a/.github/workflows/fortify.yml
+++ b/.github/workflows/fortify.yml
@@ -6,8 +6,8 @@ on:
     branches: [ "master" ]
   pull_request:
     branches: [ "master" ]
-  schedule:
-    - cron: '19 14 * * 2'
+#  schedule:
+#    - cron: '19 14 * * 2'
   workflow_dispatch:
 
 jobs:
