--- a/.github/workflows/fortify.yml
+++ b/.github/workflows/fortify.yml
@@ -23,15 +23,18 @@ jobs:
       - name: Setup Java
         uses: actions/setup-java@v4.2.1
         with:
-          java-version: '11'
+          java-version: '17'
           distribution: 'temurin'
+      - name: Set SCANCENTRAL_JAVA_HOME, restore original JAVA_HOME and PATH
+        run: |
+          echo "SCANCENTRAL_JAVA_HOME=${{ env.JAVA_HOME }}" >> ${GITHUB_ENV}
       - name: Setup Fortify tools
         uses: fortify/github-action/setup@v1.2.2
         with:
           tool-definitions: https://github.com/fortify/tool-definitions/releases/download/v1/tool-definitions.yaml.zip
           export-path: true
           fcli: skip
-          sc-client: 23.2
+          sc-client: 24.2
           vuln-exporter: latest
           bugtracker-utility: skip
           debricked-cli: skip
