delete option "-block -o -f result.fpr"

--- a/.github/workflows/fortify.yml
+++ b/.github/workflows/fortify.yml
@@ -57,7 +57,7 @@ jobs:
           SSC_TOKEN: ${{ secrets.SSC_TOKEN }}
           SSC_UPLOAD_TOKEN: ${{ secrets.SSC_UPLOAD_TOKEN }}
         with:
-          cmd: '"${SC_CLIENT_CMD}" -url ${SC_CONTROLLER_URL} start -bt none -block -o -f result.fpr -upload -application "github_action" -version "test1" -uptoken ${SSC_UPLOAD_TOKEN}'
+          cmd: '"${SC_CLIENT_CMD}" -url ${SC_CONTROLLER_URL} start -bt none -upload -application "github_action" -version "test1" -uptoken ${SSC_UPLOAD_TOKEN}'
 
       - name: Export SSC vulnerability data to GitHub
         uses: fortify/github-action/ssc-export@v1
